fix: overflow is bad for UX

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@
 html, body, app-root {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 body {
